--- a/src/src/Dotnet9.Blazor/Pages/Public/HomeRightSidebar.razor
+++ b/src/src/Dotnet9.Blazor/Pages/Public/HomeRightSidebar.razor
@@ -1,3 +1,5 @@
-﻿<WeChatOfficialAccount/>
+﻿<MContainer Class="m-0 p-0">
+    <WeChatOfficialAccount/>
 
-<BlogPostListByKind/>
+    <BlogPostListByKind/>
+</MContainer>
