--- a/src/src/Dotnet9.Blazor/Pages/Public/WeChatOfficialAccount.razor
+++ b/src/src/Dotnet9.Blazor/Pages/Public/WeChatOfficialAccount.razor
@@ -1,10 +1,10 @@
-﻿<MCard Width="200" Class="m-1" Outlined>
+﻿<MCard Outlined>
     <MImage Class="hvr-float-shadow" src="https://img1.dotnet9.com/wechatpublic.jpg" Alt="Dotnet9"></MImage>
     <MDivider Class="m-0 p-0"></MDivider>
     <MCardActions Class="m-0 p-0">Official account</MCardActions>
 </MCard>
 
-<MCard Width="200" Class="m-1" Outlined>
+<MCard Class="mt-3" Outlined>
     <MImage Class="hvr-float-shadow" src="https://img1.dotnet9.com/qqgoup1.png" Alt="Dotnet9"></MImage>
     <MDivider Class="m-0 p-0"></MDivider>
     <MCardActions Class="m-0 p-0">QQ Group</MCardActions>
