Add like buttons;

--- a/src/src/Dotnet9.Blazor/Pages/Public/BlogPost.razor
+++ b/src/src/Dotnet9.Blazor/Pages/Public/BlogPost.razor
@@ -120,7 +120,7 @@
                     break;
             }
         </MCard>
-        <MCard Class="text-center">
+        <MCard>
             <MButton Icon>
                 <MIcon>mdi-eye</MIcon>
             </MButton>
@@ -140,6 +140,22 @@
                 <MIcon>mdi-share-variant</MIcon>
             </MButton>
             <span class="subheading">9</span>
+            <Spacer></Spacer>
+            <MButton Class="ma-2"
+                     Text
+                     Icon
+                     Color="blue lighten-2">
+                <MIcon>mdi-thumb-up</MIcon>
+            </MButton>
+            <span class="subheading">9</span>
+            <span class="mr-1">·</span>
+            <MButton Class="ma-2"
+                     Text
+                     Icon
+                     Color="red lighten-2">
+                <MIcon>mdi-thumb-down</MIcon>
+            </MButton>
+            <span class="subheading mr-2">13</span>
         </MCard>
     </Column>
     <Column ColumnSize="ColumnSize.Is2.OnDesktop">
