--- a/src/_Imports.razor
+++ b/src/_Imports.razor
@@ -6,5 +6,6 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+@using MASA.Blazor
 @using Dotnet9
 @using Dotnet9.Shared
