--- a/src/Pages/_Layout.cshtml
+++ b/src/Pages/_Layout.cshtml
@@ -5,23 +5,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <base href="~/" />
-    <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
-    <link href="css/site.css" rel="stylesheet" />
-    <link href="Dotnet9.styles.css" rel="stylesheet" />
-    
-    <!--masa blazor css style-->
-    <link href="_content/MASA.Blazor/css/masa-blazor.css" rel="stylesheet" />
-    <link href="_content/MASA.Blazor/css/masa-extend-blazor.css" rel="stylesheet" />
-    <!--icon file,import need to use-->
-    <link href="https://cdn.jsdelivr.net/npm/@("@mdi")/font@6.x/css/materialdesignicons.min.css"
-          rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet" />
-    <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet" />
-
-    <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
+    <meta charset="utf-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <base href="~/"/>
+    <link href="css/app.css" rel="stylesheet"/>
+    <link href="Dotnet9.styles.css" rel="stylesheet"/>
+    <link href="_content/MASA.Blazor/css/masa-blazor.css" rel="stylesheet"/>
+    <link href="_content/MASA.Blazor/css/masa-extend-blazor.css" rel="stylesheet"/>
+    <link href="https://cdn.jsdelivr.net/npm/@("@mdi")/font@6.x/css/materialdesignicons.min.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet"/>
+    <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet"/>
+    <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered"/>
 </head>
 <body>
 @RenderBody()
@@ -39,5 +33,21 @@
 
 <script src="_framework/blazor.server.js"></script>
 <script src="_content/BlazorComponent/js/blazor-component.js"></script>
+
+<script>
+    window.setCookie = function(name, value) {
+        document.cookie = `${name}=${escape(value.toString())};path=/;}`;
+    }
+
+    window.getCookie = function(name) {
+        const reg = new RegExp(`(^| )${name}=([^;]*)(;|$)`);
+        const arr = document.cookie.match(reg);
+        if (arr) {
+            return unescape(arr[2]);
+        }
+
+        return null;
+    }
+</script>
 </body>
 </html>
