--- a/src/Dotnet9.Tools/Pages/_Layout.cshtml
+++ b/src/Dotnet9.Tools/Pages/_Layout.cshtml
@@ -11,6 +11,16 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css"/>
     <link href="css/site.css" rel="stylesheet"/>
     <link href="Dotnet9.Tools.styles.css" rel="stylesheet"/>
+    
+    <!--masa blazor css style-->
+    <link href="_content/MASA.Blazor/css/masa-blazor.css" rel="stylesheet" />
+    <link href="_content/MASA.Blazor/css/masa-extend-blazor.css" rel="stylesheet" />
+    <!--icon file,import need to use-->
+    <link href="https://cdn.jsdelivr.net/npm/@("@mdi")/font@6.x/css/materialdesignicons.min.css"
+          rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet" />
+    <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet" />
+
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered"/>
 </head>
 <body>
@@ -28,5 +38,6 @@
 </div>
 
 <script src="_framework/blazor.server.js"></script>
+<script src="_content/BlazorComponent/js/blazor-component.js"></script>
 </body>
 </html>
