--- a/src/Dotnet9.Tools/_Imports.razor
+++ b/src/Dotnet9.Tools/_Imports.razor
@@ -6,5 +6,6 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
+@using MASA.Blazor
 @using Dotnet9.Tools
 @using Dotnet9.Tools.Shared
