--- a/src/Dotnet9.Tools.Web/Pages/_Layout.cshtml
+++ b/src/Dotnet9.Tools.Web/Pages/_Layout.cshtml
@@ -47,6 +47,29 @@
         }
         return null;
     };
+
+    async function downloadFileFromStream(fileName, contentStreamReference) {
+        const arrayBuffer = await contentStreamReference.arrayBuffer();
+        const blob = new Blob([arrayBuffer]);
+
+        const url = URL.createObjectURL(blob);
+
+        triggerFileDownload(fileName, url);
+
+        URL.revokeObjectURL(url);
+    }
+
+    function triggerFileDownload(fileName, url) {
+        const anchorElement = document.createElement('a');
+        anchorElement.href = url;
+
+        if (fileName) {
+            anchorElement.download = fileName;
+        }
+
+        anchorElement.click();
+        anchorElement.remove();
+    }
 </script>
 
 </body>
