Add ICO converter translation;

--- a/src/Dotnet9.Tools.Web/Pages/Public/Index.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Index.razor
@@ -2,7 +2,7 @@
 @using BlazorComponent
 @layout PublicLayout
 
-<PageTitle>Dotnet9工具箱</PageTitle>
+<PageTitle>@T("Dotnet9ToolsTitle")</PageTitle>
 
 <div class="home">
     <MRow Class="banner" NoGutters Align="AlignTypes.Center" Justify="JustifyTypes.Center">
