--- a/src/Dotnet9.Tools.Web/Shared/PublicFooter.razor
+++ b/src/Dotnet9.Tools.Web/Shared/PublicFooter.razor
@@ -10,12 +10,12 @@
         </div>
         <div>
             <p>Dotnet9</p>
-            <p>@T("JoinUs")</p>
+            <p>@T(nameof(LanguageKeys.JoinUs))</p>
             <p class="foot-p">&nbsp;</p>
         </div>
         <div>
-            <p>@T("UpdateLog")</p>
-            <p>@T("CommonProblem")</p>
+            <p>@T(nameof(LanguageKeys.UpdateLog))</p>
+            <p>@T(nameof(LanguageKeys.CommonProblem))</p>
             <p class="foot-p">&nbsp;</p>
         </div>
     </div>
