--- a/src/Dotnet9.Tools.Web/_Imports.razor
+++ b/src/Dotnet9.Tools.Web/_Imports.razor
@@ -6,7 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.JSInterop
-@using Masa.Blazor
+@using MASA.Blazor
 @using Dotnet9.Tools
 @using Dotnet9.Tools.Web.Shared
 @using Dotnet9.Tools.Web.Utils
