--- a/src/Dotnet9.Tools.Web/Shared/PublicFooter.razor
+++ b/src/Dotnet9.Tools.Web/Shared/PublicFooter.razor
@@ -1,24 +1,21 @@
-﻿@inject I18n I18N
+﻿@using BlazorComponent.I18n
+@inject I18n I18N
 
-<MFooter Dark Padless Color="#5C2D91" Height="333" Class="footer">
+<MFooter Dark Padless Color="#5C2D91" Height="444" Class="footer">
     <div class="foot-box">
         <div>
-            <p>感谢</p>
-            <p class="foot-p">
-                <a href="https://masa-blazor-docs-dev.lonsid.cn/" target="_blank">Masa Blazor</a>
-            </p>
+            <p>Blazor</p>
+            <p class="foot-p">&nbsp;</p>
             <p class="foot-p">&nbsp;</p>
         </div>
         <div>
-            <p>友链</p>
-            <p>
-                <a href="https://dotnet9.com" target="_blank">Dotnet9</a>
-            </p>
+            <p>Dotnet9</p>
+            <p>@T("JoinUs")</p>
             <p class="foot-p">&nbsp;</p>
         </div>
         <div>
-            <p>@T(nameof(LanguageKeys.UpdateLog))</p>
-            <p>@T(nameof(LanguageKeys.CommonProblem))</p>
+            <p>@T("UpdateLog")</p>
+            <p>@T("CommonProblem")</p>
             <p class="foot-p">&nbsp;</p>
         </div>
     </div>
@@ -31,8 +28,3 @@
         return I18N.LanguageMap.GetValueOrDefault(key);
     }
 }
-
-<style>
-
-    
-</style>
