add cnzz and google adsense;

--- a/src/Dotnet9.Tools.Web/Pages/Public/Index.razor
+++ b/src/Dotnet9.Tools.Web/Pages/Public/Index.razor
@@ -30,7 +30,7 @@
                          Color="black"
                          Height="64"
                          Class="text-20 px-6 mb-6 mx-6"
-                         Href="/">
+                         Href="https://dotnet9.com">
                     @T("GoToDotnet9Blog")
                 </MButton>
                 <MButton Dark
