--- a/src/Dotnet9.Tools.Web/Pages/_Layout.cshtml
+++ b/src/Dotnet9.Tools.Web/Pages/_Layout.cshtml
@@ -17,6 +17,17 @@
     <link href="https://fonts.googleapis.com/css2?family=Material+Icons" rel="stylesheet"/>
     <link href="https://use.fontawesome.com/releases/v5.0.13/css/all.css" rel="stylesheet"/>
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered"/>
+    <script>
+    var _hmt = _hmt || [];
+    (function() {
+      var hm = document.createElement("script");
+      hm.src = "https://hm.baidu.com/hm.js?9b94368aba4e3f0847610338b1abd6d9";
+      var s = document.getElementsByTagName("script")[0]; 
+      s.parentNode.insertBefore(hm, s);
+    })();
+    </script>
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-8748951917303002"
+            crossorigin="anonymous"></script>
 </head>
 <body>
 @RenderBody()
@@ -74,3 +85,6 @@
 
 </body>
 </html>
+<div style="text-align: center">
+    <script type="text/javascript">document.write(unescape("%3Cspan id='cnzz_stat_icon_1280900562'%3E%3C/span%3E%3Cscript src='https://s9.cnzz.com/z_stat.php%3Fid%3D1280900562%26online%3D1%26show%3Dline' type='text/javascript'%3E%3C/script%3E"));</script>
+</div>
